[project]
name = "encompass-to-samsara"
version = "0.1.0"
description = "Production-ready CLI to sync Encompass addresses into Samsara"
requires-python = ">=3.11"
authors = [{name="JECO Ops Analytics"}]
readme = "README.md"
license = {text = "Proprietary"}
dependencies = [
  "click>=8.1.7",
  "requests>=2.32.3",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.2",
  "pytz>=2024.1",
  "tqdm>=4.66",
  "openpyxl>=3.1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.1",
  "responses>=0.25.3",
  "ruff>=0.5.7",
]

[project.scripts]
sync-e2s = "encompass_to_samsara.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
fix = true
